BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/Struttura_Banca__c.object-meta.xml
<CustomObject>
    <label>Struttura Banca</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Struttura Banca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Struttura Banche</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>