BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Cambio_Stato__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Stato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Stato</label>
    <type>Checkbox</type>
</CustomField>