BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Codice_Controllo_Accessi__c.field-meta.xml
<CustomField>
    <fullName>Codice_Controllo_Accessi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Controllo Accessi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>