BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Codice_CRM__c.field-meta.xml
<CustomField>
    <fullName>Codice_CRM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice CRM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>