BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Codice_Filiale__c.field-meta.xml
<CustomField>
    <fullName>Codice_Filiale__c</fullName>
    <formula>IF(ISBLANK(Codice_Controllo_Accessi__c),null,
TEXT(VALUE(MID(TRIM(Codice_Controllo_Accessi__c),6,5))))</formula>
    <label>Codice Filiale</label>
    <type>Text</type>
</CustomField>