BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Codice_Sezione__c.field-meta.xml
<CustomField>
    <fullName>Codice_Sezione__c</fullName>
    <formula>IF(ISBLANK(Codice_Controllo_Accessi__c),null,
MID(TRIM(Codice_Controllo_Accessi__c),16,5))</formula>
    <label>Codice Sezione</label>
    <type>Text</type>
</CustomField>