BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Codice_Ufficio__c.field-meta.xml
<CustomField>
    <fullName>Codice_Ufficio__c</fullName>
    <formula>IF(ISBLANK(Codice_Controllo_Accessi__c),null,
MID(TRIM(Codice_Controllo_Accessi__c),11,5))</formula>
    <label>Codice Ufficio</label>
    <type>Text</type>
</CustomField>