BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/CRM_Email__c.field-meta.xml
<CustomField>
    <fullName>CRM_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>