BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Dimensione__c.field-meta.xml
<CustomField>
    <fullName>Dimensione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dimensione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>