BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/DT_SALES_BA__c.field-meta.xml
<CustomField>
    <fullName>DT_SALES_BA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DT_SALES_BA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>