BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Fittizzia__c.field-meta.xml
<CustomField>
    <fullName>Fittizzia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fittizzia</label>
    <type>Checkbox</type>
</CustomField>