BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/IDCed_Fittizia__c.field-meta.xml
<CustomField>
    <fullName>IDCed_Fittizia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDCed Fittizia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>