BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/IDCed_Padre__c.field-meta.xml
<CustomField>
    <fullName>IDCed_Padre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDCed Padre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>