BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/IDCed_UffPrivate__c.field-meta.xml
<CustomField>
    <fullName>IDCed_UffPrivate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDCed Ufficio Private</label>
    <length>255</length>
    <type>Text</type>
</CustomField>