BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/IsCRM__c.field-meta.xml
<CustomField>
    <fullName>IsCRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CRM</label>
    <type>Checkbox</type>
</CustomField>