BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/IsPTF__c.field-meta.xml
<CustomField>
    <fullName>IsPTF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PTF</label>
    <type>Checkbox</type>
</CustomField>