BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Livello__c.field-meta.xml
<CustomField>
    <fullName>Livello__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Livello</label>
    <length>255</length>
    <type>Text</type>
</CustomField>