BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Macro_Filiera__c.field-meta.xml
<CustomField>
    <fullName>Macro_Filiera__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Macro Filiera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>