BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/NDW_External_Id__c.field-meta.xml
<CustomField>
    <fullName>NDW_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>