BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Nome_Livello__c.field-meta.xml
<CustomField>
    <fullName>Nome_Livello__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Livello</label>
    <length>255</length>
    <type>Text</type>
</CustomField>