BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>