BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/STG_X_Update_TS__c.field-meta.xml
<CustomField>
    <fullName>STG_X_Update_TS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>STG_X_Update_TS</label>
    <type>DateTime</type>
</CustomField>