BPER/DEVF/force-app/main/default/objects/Struttura_Banca__c/fields/Tipo_Sportello__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Sportello__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Sportello</label>
    <length>255</length>
    <type>Text</type>
</CustomField>